<resources>
    <string name="action_mark_read"
            comment="action item: mark episode as not-new and save it in my episodes"
            >Save for later</string>
    <string name="action_mark_finished"
            comment="action item: mark episode as finished"
            >Mark finished</string>
    <string name="action_mark_finished_from_here">Mark finished from here</string>
    <string name="action_mark_finished_to_here">Mark finished until here</string>
    <string name="action_mark_unfinished"
            comment="action item: mark a finished episode as unfinished"
            >Mark unfinished</string>
    <string name="action_stream"
            comment="action item: starts playback for an episode which has not been downloaded"
            >Stream</string>
    <string name="action_cast"
            comment="action item: starts playback of an episode on a remote device (e.g. chromecast)"
            >Cast</string>
    <string name="action_pause"
            comment="action item: pause playback"
            >Pause</string>
    <string name="action_play"
            comment="action item: start/resume playback"
            >Play</string>
    <string name="action_play_next"
            comment="action item: insert episode at the second position of the playlist"
            >Play next</string>
    <string name="action_add_to_playlist"
            comment="action item: add episode to the end of the playlist"
            >Add to playlist</string>
    <string name="action_download"
            comment="action item"
            >Download</string>
    <string name="action_add_download"
            comment="action item: add episode to the end of the download queue"
            >Add to download queue</string>
    <string name="action_delete_download"
            comment="action item: delete the episode's downloaded media file"
            >Delete download</string>
    <string name="action_stop_download"
            comment="action item: suspend the currently running download"
            >Stop download</string>
    <string name="action_download_error"
            comment="action item: red warning icon shown when the download for an episode failed. Opens a dialog with failure information when tapped."
            >Download failed</string>
    <string name="action_star"
            comment="action item: mark the current episode as starred"
            >Star</string>
    <string name="action_unstar"
            comment="action item: mark the current episode as unstarred"
            >Unstar</string>
    <string name="pref_category_workflow"
            comment="setting category"
            >Workflow</string>
    <string name="pref_auto_add_to_playlist"
            comment="setting title"
        >Auto add to playlist</string>
    <string name="pref_auto_add_to_playlist_summary"
            comment="setting summary"
        >Automatically add all new episodes to the end of your playlist</string>
    <string name="pref_skip_new"
            comment="setting title"
            >Save all for later</string>
    <string name="pref_skip_new_summary"
            comment="setting summary"
            >Automatically mark all new episodes as not-new and save them for later</string>
    <string name="pref_hide_new_in_library"
            comment="setting title"
            >Inbox mode</string>
    <string name="pref_hide_new_in_library_summary"
            comment="setting summary"
            >Show new episodes only in the »New« section and on the playlist and download queue</string>
    <string name="pref_notify_new_episodes"
            comment="setting title"
            >Notify on new episodes</string>
    <string name="pref_notify_new_episodes_summary"
            comment="setting summary"
            >Bring up a status bar notification if there are new episodes for your subscriptions</string>
    <string name="pref_category_filters"
            comment="setting category defining which filters to show in navigation view"
            >Sections in Navigation Drawer</string>
    <string name="pref_filter_media_type"
            comment="setting title"
            >Show »Audio« &amp; »Video« section</string>
    <string name="pref_filter_media_type_summary"
            comment="setting summary"
            >Shows the »Audio« and »Video« section in the navigation drawer</string>
    <string name="pref_filter_downloaded"
            comment="setting title"
            >Show »Downloaded« section</string>
    <string name="pref_filter_downloaded_summary"
            comment="setting summary"
            >Shows the »Downloaded« section in the navigation drawer</string>
    <string name="pref_category_primary_action"
            comment="setting category for defining the primary action for episodes"
            >Primary Episode Action</string>
    <string name="pref_primary_download_action"
            comment="setting title"
            >Not downloaded episodes</string>
    <string name="pref_primary_download_action_selection_title"
            comment="title of primary download action picker dialog"
            >Primary action for not downloaded episodes</string>
    <string name="pref_add_as_primary_new_action"
            comment="setting title"
            >New episodes</string>
    <string name="pref_add_as_primary_new_action_selection_title"
            comment="title of option picker for primary action for new episodes"
            >Show »Save for later« action for new episodes</string>
    <string name="pref_category_podcast_grid">Podcast Grid</string>
    <string name="pref_podcast_grid_type"
            comment="title of setting specifying how to display the podcast grid"
        >Podcast grid</string>
    <string name="pref_podcast_grid_type_selection_title"
            comment="title of podcast list display type picker dialog"
        >Display podcasts as</string>
    <string name="pref_podcast_grid_show_title">Show podcast title</string>
    <string name="pref_podcast_grid_show_title_summary">Show podcast title below image</string>
    <string name="pref_sync_notification">Sync notification</string>
    <string name="pref_sync_notification_summary">Show sync progress notification in Android\'s status bar while syncing</string>
    <string name="pref_category_sync_automatic">Automatic Synchronization</string>
    <string name="pref_sync_frequency">Sync frequency</string>
    <string name="pref_sync_time_1">Sync time 1</string>
    <string name="pref_sync_time_2">Sync time 2</string>
    <string name="pref_sync_time_summary">Synchronize every day at:</string>
    <string name="pref_sync_only_on_wifi"
            comment="setting title"
            >Sync only on Wi-FI</string>
    <string name="pref_sync_only_on_wifi_summary"
            comment="setting summary"
            >Only sync automatically when connected via Wi-FI. Missed syncs will be catched up as soon as Wi-FI is available.</string>
    <string name="pref_sync_time_info">Time info</string>
    <string name="pref_category_sync_cloud">Cloud Synchronization</string>
    <string name="pref_sync_cloud">Cloud sync</string>
    <string name="pref_sync_cloud_summary">Backup your playlist, playback positions and episode states to Google Drive and sync them across all your uPod devices</string>
    <string name="pref_fix_gdrive_app_folder">Fix Google Drive for sync</string>
    <string name="pref_fix_gdrive_app_folder_summary">Make sync work again after you\'ve deleted uPod\'s app data in Google Drive</string>
    <string name="pref_license_none"
            comment="settings title shown for the first setting in the 'License' settings screen when the user does not have a license"
            >No license</string>
    <string name="pref_license_none_summary"
            comment="settings summary shown for the first setting in the 'License' settings screen when the user does not have a license"
            >You do not have a license. Tap to check for license.</string>
    <string name="pref_license_purchase"
            comment="setting title"
            >Purchase premium version</string>
    <string name="pref_license_purchase_summary"
            comment="setting summary"
            >Opens the uPod premium license in Google play!</string>
    <string name="pref_license_start_trial">Start trial period</string>
    <string name="pref_license_start_trial_summary">Test all premium features for 7 days</string>
    <string name="pref_license_trial_period"
            comment="setting title"
            >Trial period</string>
    <string name="pref_category_support"
            comment="top level settings category"
            >Feedback &amp; Support</string>
    <string name="pref_reset_tips">Show tips again</string>
    <string name="pref_reset_tips_summary">Make all of the introducing tips appear again</string>
    <string name="pref_support_site"
            comment="setting title"
            >Feedback &amp; support</string>
    <string name="pref_support_site_summary"
            comment="setting summary"
            >Get help and vote for features on the uPod support site</string>
    <string name="pref_enhanced_logging"
            comment="setting title"
            >Enhanced logging</string>
    <string name="pref_enhanced_logging_summary"
            comment="setting summary"
            >Writes more detailed logs. Only enable if support asked you to do so</string>
    <string name="pref_send_diagnostics"
            comment="setting title"
            >Send diagnostics</string>
    <string name="pref_send_diagnostics_summary"
            comment="setting summary"
            >Send logs and other diagnostics to the support using your e-mail app</string>
    <string name="pref_category_contribute"
            comment="setting category"
            >Contribute</string>
    <string name="pref_purchase"
            comment="setting title"
            >Purchase premium license</string>
    <string name="pref_purchase_summary"
            comment="setting summary"
            >Unlock uPod\'s premium features and help us to further improve uPod</string>
    <string name="pref_rate"
            comment="setting title"
            >Rate uPod at Google play!</string>
    <string name="pref_rate_summary"
            comment="setting summary"
            >Help us to make uPod more successful and rate it at Google play!</string>
    <string name="pref_share_upod"
            comment="setting title"
            >Tell your friends about uPod</string>
    <string name="pref_share_upod_summary"
            comment="setting summary"
            >Help us to make uPod more famous by telling your friends about uPod</string>
    <string name="pref_beta"
            comment="setting title"
            >uPod beta channel</string>
    <string name="pref_beta_summary"
            comment="setting summary"
            >Become a uPod beta tester</string>
    <string name="pref_category_info"
            comment="setting category"
            >Info</string>
    <string name="pref_about"
            comment="setting title"
            >About uPod</string>
    <string name="pref_about_summary"
            comment="setting summary"
            >Version number and licenses</string>
    <string name="pref_website"
            comment="setting title"
            >uPod blog</string>
    <string name="pref_website_summary"
            comment="setting summary"
            >Read the latest news on the uPod website</string>
    <string name="pref_gplus"
            comment="setting title"
            >uPod at Google+</string>
    <string name="pref_gplus_summary"
            comment="setting summary"
            >Follow uPod at Google+</string>
    <string name="pref_twitter"
            comment="setting title"
            >uPod at Twitter</string>
    <string name="pref_twitter_summary"
            comment="setting summary"
            >Follow uPod at Twitter</string>
</resources>