<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:support="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_mark_read"
          android:icon="@drawable/ic_action_mark_read"
          android:title="@string/action_mark_read"
          support:showAsAction="always"/>
    <item android:id="@+id/action_add_to_playlist"
          android:icon="@drawable/ic_action_playlist_add"
          android:title="@string/action_add_to_playlist"
          support:showAsAction="ifRoom"/>
    <item android:id="@+id/action_add_download"
          android:icon="@drawable/ic_action_download_add"
          android:title="@string/action_add_download"
          support:showAsAction="ifRoom"/>
    <item android:id="@+id/action_mark_finished"
          android:icon="@drawable/ic_action_finished"
          android:title="@string/action_mark_finished"
          support:showAsAction="always"/>
</menu>